fix(#221): increase reduced header height to prevent overflow

--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -20,7 +20,7 @@
   }
 
   &-reduced {
-    height: 110px;
+    height: 120px;
 
     @media (max-width: breakpoints.$xsm) {
       height: auto;
